--- a/ProtoBasket.Common.Model.csproj
+++ b/ProtoBasket.Common.Model.csproj
@@ -41,14 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\Allocation.cs" />
+    <Compile Include="Model\Match\Allocation.cs" />
     <Compile Include="Model\Match\HandicapMatch.cs" />
     <Compile Include="Model\Match\Match.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="Model\Match\UnderOverMatch.cs" />
-    <Compile Include="Model\Proto.cs" />
+    <Compile Include="Model\Match\Proto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Model\Score.cs" />
+    <Compile Include="Model\Match\Score.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
