--- a/ProtoBasket.Common.Model.csproj
+++ b/ProtoBasket.Common.Model.csproj
@@ -12,6 +12,8 @@
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -41,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Interface\IIdentification.cs" />
     <Compile Include="Model\Match\Allocation.cs" />
     <Compile Include="Model\Match\HandicapMatch.cs" />
     <Compile Include="Model\Match\Match.cs" />
@@ -49,6 +52,7 @@
     <Compile Include="Model\Match\Proto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\Match\Score.cs" />
+    <Compile Include="Repository\ProtoRepository.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
