--- a/ProtoBasket.Common.Model.csproj
+++ b/ProtoBasket.Common.Model.csproj
@@ -43,9 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Interface\IAllocation.cs" />
     <Compile Include="Model\Interface\IHandicapMatch.cs" />
     <Compile Include="Model\Interface\IIdentification.cs" />
     <Compile Include="Model\Interface\IMatch.cs" />
+    <Compile Include="Model\Interface\IScore.cs" />
     <Compile Include="Model\Interface\IUnderOverMatch.cs" />
     <Compile Include="Model\Match\Allocation.cs" />
     <Compile Include="Model\Match\HandicapMatch.cs" />
