--- a/ProtoBasket.Common.Model.csproj
+++ b/ProtoBasket.Common.Model.csproj
@@ -43,11 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Game.cs" />
     <Compile Include="Model\Interface\IAllocation.cs" />
+    <Compile Include="Model\Interface\IGame.cs" />
     <Compile Include="Model\Interface\IHandicapMatch.cs" />
     <Compile Include="Model\Interface\IIdentification.cs" />
     <Compile Include="Model\Interface\IMatch.cs" />
-    <Compile Include="Model\Interface\IScore.cs" />
+    <Compile Include="Model\Interface\IScorable.cs" />
     <Compile Include="Model\Interface\IUnderOverMatch.cs" />
     <Compile Include="Model\Match\Allocation.cs" />
     <Compile Include="Model\Match\HandicapMatch.cs" />
@@ -56,7 +58,6 @@
     <Compile Include="Model\Match\UnderOverMatch.cs" />
     <Compile Include="Model\Match\Proto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Model\Match\Score.cs" />
     <Compile Include="Repository\ProtoRepository.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
